# quant-lab

trade-backtest-engine/: README.md  pyproject.toml
trade-backtest-engine/notebooks/: 01_data_explore.ipynb
trade-backtest-engine/src/quant_lab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
trade-backtest-engine/src/quant_lab/data/: loader.py
trade-backtest-engine/src/quant_lab/engine/: backtest.py
trade-backtest-engine/src/quant_lab/features/: indicators.py
trade-backtest-engine/src/quant_lab/metrics/: performance.py  trades.py
trade-backtest-engine/src/quant_lab/strategies/: donchain_breakout.py  ema_crossover.py  ma_crossover.py  sma_crossover.py
